# partages-cu1

./: LICENSE  README.md  pyproject.toml
scripts/: preannotate.py  preannotate_config.yml
