[project]
name = "partages-cu1"
version = "0.1.0"
description = "Partages CU1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.14",
    "confit>=0.10.2",
    "edsnlp>=0.19.0",
    "openai>=2.9.0",
]

[tool.uv.sources]
edsnlp = { git = "https://github.com/aphp/edsnlp" }
